did + proofs
