# docs/swagger.json
@@ -10,9 +10,32 @@
         },
         "version": "0.4.0"
     },
-    "host": "ancon.did.pa/api",
+    "host": "api.ancon.did.pa",
     "basePath": "/v0",
     "paths": {
+        "/v0/code": {
+            "post": {
+                "description": "Execute library smartcontracts.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "file"
+                ],
+                "summary": "Upload hybrid smartcontracts",
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/v0/dagcbor": {
             "post": {
                 "description": "Writes a dag-cbor block which syncs with IPFS. Returns a CID.",
@@ -138,6 +161,95 @@
                 "responses": {
                     "200": {
                         "description": ""
+                    }
+                }
+            }
+        },
+        "/v0/proofs": {
+            "post": {
+                "description": "Writes an ics23 proof",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "proofs"
+                ],
+                "summary": "Create",
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v0/proofs/verify": {
+            "post": {
+                "description": "Verifies an ics23 proof",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "proofs"
+                ],
+                "summary": "Verifies an ics23 proofs",
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v0/proofs/{cid}/{path}": {
+            "get": {
+                "description": "Returns JSON",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "proofs"
+                ],
+                "summary": "Reads an existing proof",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/v0/tip": {
+            "post": {
+                "description": "Writes a dag-json block which syncs with IPFS. Returns a CID.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dag-json"
+                ],
+                "summary": "Stores JSON as dag-json",
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
